Fix the spacing in the code

--- a/css/main.css
+++ b/css/main.css
@@ -1,44 +1,10 @@
-html {font-size: 1em;
-
-  box-sizing: border-box;
-  }
-
-  *, *::before, *::after {
-    box-sizing: inherit;
-  }
-}
-
-
-p {margin-bottom: 1.3em;
-  width: 100%;
-  display:block;
-}
-
-h1, h2, h3, h4 {
-  margin: 1.414em 0 0.5em;
-  font-weight: inherit;
-  line-height: 1.2;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 3.998em;
-}
-
-h2 {font-size: 2.827em;}
-
-h3 {font-size: 1.999em;}
-
-h4 {font-size: 1.414em;}
-
-small, .font_small {font-size: 0.707em;}
 
 .bigfont {
-  font-family: 'Russo One', sans-serif;
+  font-family: "Russo One", sans-serif;
 }
 
 .script {
-  font-family: 'Great Vibes', sans-serif;
+  font-family: "Great Vibes", sans-serif;
 }
 
 .grid {
@@ -50,12 +16,10 @@ small, .font_small {font-size: 0.707em;}
 
   .red {
     background-color: #da353c;
-
-
   }
 
   .blue {
-    background-color: #8FE1DB;
+    background-color: #8fe1db;
   }
 
   .unit {
@@ -64,14 +28,10 @@ small, .font_small {font-size: 0.707em;}
 
 }
 
-
-
 @media only screen and (min-width: 68em) {
 
-
-
   .blue {
-    background-color: #8FE1DB;
+    background-color: #8fe1db;
   }
 
 
